Fix overflowing area in demo

--- a/src/mantine-ds/src/DemoArea/DemoArea.module.css
+++ b/src/mantine-ds/src/DemoArea/DemoArea.module.css
@@ -17,6 +17,7 @@
   }
 
   &[data-striped] {
+    border-top-left-radius: calc(var(--mantine-radius-md) - rem(1px));
     background: repeating-linear-gradient(
         45deg,
         transparent 0,
@@ -31,6 +32,11 @@
         var(--stripe-color) rem(10px),
         var(--stripe-color) rem(12px)
       );
+
+    @mixin rtl {
+      border-top-right-radius: calc(var(--mantine-radius-md) - rem(1px));
+      border-top-left-radius: 0;
+    }
 
     @mixin light {
       --stripe-color: rgba(0, 0, 0, 0.03);
